unpackaged/main/default/objects/Qualification_Sheet__c/Qualification_Sheet__c.object-meta.xml
<CustomObject>
    <label>Qualification Sheet</label>
    <nameField>
        <label>Qualification Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualification Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>