unpackaged/main/default/objects/Qualification_Sheet__c/fields/Identifier_Key__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Key__c</fullName>
    <description>Identifier Key allows you to check that only one Qualification Sheet is created for a given Product Line in a Quote.</description>
    <externalId>true</externalId>
    <label>Identifier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>