unpackaged/main/default/objects/Qualification_Sheet__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Qualification Sheets</relationshipLabel>
    <relationshipName>Qualification_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>