unpackaged/main/default/objects/Qualification_Sheet__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Qualification Sheets</relationshipLabel>
    <relationshipName>Qualification_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>