unpackaged/main/default/objects/Qualification_Sheet__c/fields/Qualification_Sheet_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Sheet_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualification Sheet Uploaded</label>
    <type>Checkbox</type>
</CustomField>